3.3.6
	+ Zentyal MySQL custom conf is now written on initial-setup of logs
	  using a mason template
	+ Write logs configuration only when the module is enabled
	+ Use replace instead of href to redirect in Controller::DataTable
	  (This avoids infinite loops if the user press back button)
	+ Move EBox::CGI::Downloader::* modules  to EBox::Downloader to
	  make file downloads work again
3.3.5
	+ Avoid division by zero while using page navigation
	+ Automatic report text formatting adapted to Redmine
	+ Fix tab selection in tabbed composite from URL path anchor,
	  for instance, /Maintenance/Events#ConfigureDispatchers
	+ Avoid errors triggered on web administration port validation
	+ ManageAdmins model now also add/removes lpadmin group
	+ Show nice error when global-action fails using die + scalar
	+ Fixed JS error on showing errors in customActionClicked
	+ Fixed rethrown of exception in restartService() and
	  EBox::CGI::Base::upload methods
3.3.4
	+ Remove lock file in EBox::Util::Lock::unlock()
	+ Fixed mason component root for custom stubs
3.3.3
	+ Fixed regression in clone action
	+ Decode to utf8 the MySQL database results
	+ Create log database using utf8 charset
	+ Better way to set MySQL password for all the root accounts
	+ Use same JSON reply file for changeRowForm and dataInUse
	+ Fixed regression in AJAX changes with raised error when a
	  data in use exception was found
	+ Fixed css error that hide information in the logs tables
	+ Use sharedscripts in zentyal-core logrotate to avoid triggering
	  in every log file
	+ Take into account view customizer on audit logging
	+ Show complex types (more than one field) in audit log
	  while editing by storing the dump of the value
	+ Fix EBox::Types::Composite::cmp to store changes when only last type
	  is modified
	+ Fixed general widget packages to avoid error on 'packages to
	  upgrade' section
3.3.2
	+ Fixed regression when table size is set to 'view all'
3.3.1